Fixed some of the units in the wp align classes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -952,7 +952,7 @@ section {
 
 .wp-caption {
   background-color: #eee;
-  padding: 10px; }
+  padding: 1rem; }
 
 .wp-caption-text, .gallery-caption {
   text-align: center; }
